# Power_BI_Explorer

./: .replit  Pasted--app-py-import-os-from-flask-import-Flask-render-template-g-from-data-processor-import-DataPro-1732733003436.txt  app.py  base.html  data_processor.py  dax_expressions.html  index.html  lineage_view.py  models.py  pyproject.toml  source_explorer.html  unused_measures.html
data/: MeasureDependencies.tsv  model.json  report.json
instance/: powerbi.db
static/: dax_explorer.js  lineage_view.js  responsive.css  se.css  styles.css  table_view.js  table_view_search.js
static/css/: base.css  dax_expressions.css  home.css  lineage.css  se.css  source_explorer.css  style.css  styles.css  table.css
static/js/: lineage_view.js  main.js  table_view_search.js  upload.js
templates/: base.html  dax_expressions.html  index.html  lineage_view.html  source_explorer.html  table_view.html  unused_measures.html
utils/: data_processor.py  lineage_view.py  nlp_processor.py  powerbi_parser.py
