[project]
name = "repl-nix-powerchatbi"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "spacy>=3.8.2",
    "langchain>=0.0.27",
    "openai>=1.55.2",
    "langchain-openai>=0.2.10",
    "langchain-core>=0.3.21",
    "pydantic>=2.10.2",
]
